// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformGrandTotalData should correctly transform grand total data 1`] = `
Array [
  Array [
    Array [
      6,
      3,
      15,
      6,
    ],
    Array [
      null,
      1,
      null,
      2,
    ],
  ],
  Array [],
]
`;

exports[`transformGrandTotalData should correctly transform grand total data with two header groups 1`] = `
Array [
  Array [
    Array [
      7232,
      3914.259799423051,
      null,
      null,
    ],
  ],
  Array [],
]
`;
